--- a/index.html
+++ b/index.html
@@ -10,39 +10,30 @@
     <h1>Update CSS variables with JS</h1>
     <div class="controls">
       <label for="spacing">Spacing:</label>
-      <input type="range" id="spacing" min="0" max="100" />
+      <input
+        type="range"
+        id="spacing"
+        name="spacing"
+        min="0"
+        max="100"
+        data-sizing="px"
+      />
       <label for="blur">Blur:</label>
-      <input type="range" id="blur" min="0" max="5" />
-      <label for="baseColor">Base Color:</label>
-      <input type="color" id="baseColor" />
+      <input
+        type="range"
+        id="blur"
+        min="0"
+        max="5"
+        name="blur"
+        data-sizing="px"
+      />
+      <label for="base">Base Color:</label>
+      <input type="color" id="base" name="base" />
     </div>
     <img
       src="https://images.unsplash.com/photo-1561488111-5d800fd56b8a?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
       alt=""
     />
-    <script>
-      const spacing = document.querySelector("#spacing");
-      const blur = document.querySelector("#blur");
-      const baseColor = document.querySelector("#baseColor");
-      const image = document.querySelector("img");
-
-      console.log(window.getComputedStyle(image).getPropertyValue("--blur"));
-
-      function updateSpacing() {
-        image.style.setProperty("--spacing", `${spacing.value}px`);
-      }
-
-      function updateBlur() {
-        image.style.setProperty("--blur", `${blur.value}px`);
-      }
-
-      function updateBaseColor() {
-        image.style.setProperty("--background-color", `${baseColor.value}`);
-      }
-
-      spacing.addEventListener("change", updateSpacing);
-      blur.addEventListener("change", updateBlur);
-      baseColor.addEventListener("change", updateBaseColor);
-    </script>
+    <script src="main.js"></script>
   </body>
 </html>
